# punch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  punch-completion.bash  punch.py  punch.yaml  pyproject.toml  tasks.txt  zsh-completion
.github/workflows/: build-snap.yml  python-unittests.yml  sanity-check.yml
punch/: README.md  __init__.py  cli.py  commands.py  config.py  export.py  punch.yaml  report.py  tasks.py  tasks.txt  web.py  weeklyeditor.py
punch/ui/: cli.py  interactive.py
scripts/: test_all_cli_options.sh
snap/: snapcraft.yaml
tests/: test_cli.py  test_config.py  test_tasks.py  test_web.py
